# chess_game

./: .gitignore  Attack.py  CMakeLists.txt  Constants.py  GameState.py  Move.py  PGNtoUCI.py  Piece.py  README.md  Untitled-1.sql  Visual.py  algebraic_notation.py  board.py  board_test.py  board_tree.txt  con1.session.sql  deneme.py  game.py  individual_pieces.py  lala.py  main.py  piece_types.py  utilities.py
.VSCodeCounter/2023-07-02_05-29-04/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-07-05_03-07-12/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-07-05_13-09-18/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-07-11_11-05-13/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-07-11_13-31-18/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-07-11_18-54-52/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
chess/: Move.py  game.py  main.py  movegenerator.py
chess/trash/: Pieces.py
chess_game_cpp/: CMakeCache.txt  CMakeLists.txt  mask_generation.cpp  move_generation.cpp  move_generation.hpp  position.cpp  position.hpp  testing.cpp
chess_game_cpp/src/: Move.cpp  Move.hpp  UCI.cpp  UCI.hpp  a.out  all_white_pawn_attacks.txt  bitoperations.cpp  bitoperations.hpp  black_pawn_attacks.txt  class perftTest {.cpp  constants.hpp  evaluation.cpp  evaluation.hpp  gameState.cpp  gameState.hpp  loader.cpp  loader.hpp  main.cpp  mask_generation.cpp  moveTest.cpp  moveToStr.cpp  moveValidator.cpp  moveValidator.hpp  move_generation.cpp  move_generation.hpp  move_generation_test.cpp  movelist.cpp  movelist.hpp  position.cpp  position.hpp  search.cpp  search.hpp  tables.cpp  tables.hpp  utilities.cpp  utilities.hpp  white_pawn_attacks.txt  zobrist.cpp  zobrist.hpp
chess_game_cpp/tests/: constantsTest.cpp  evaluation.cpp.  evaluationTest.cpp  evalutaionTest.cpp  fast_prototpying.ipynb  gameLoopTest.cpp  loader_test.cpp  moveListTest.cpp  moveTest.cpp  move_generation_test.cpp  perftTest.cpp  perftTest.hpp  position_test.cpp  printBoardTest.cpp  scoreTest.cpp  searchTest.cpp  unitTests.cpp  utilTest.cpp
chess_python_api/: Board.py  GameState.py  Visual.py  movegenerator.py
chess_python_api/trash/: algebraic_notation.py
chess_python_api/utilities/: FENinterpreter.py  PositionConverter.py
db/: Adams.pgn  con1.session.sql  create_liches_tbl.sqlite  create_table.sqlite  dbquerying.sqlite  dbutilities.py  denemedb.py  experimentingipynb.ipynb  file.csv  lala.txt  master_games.db  master_games.db-journal  master_games_db.sqlite  migrate_table.sqlite  pgn_to_sql.py  split_long_lines.c
db/acquisition/: dbutilities.py  la.py  pgn_to_sql.py
db/managing/: -- show 100 entries of lichess_games tab.sql  con1.session.sql  create_liches_tbl.sql  master_games_db.sqlite
db/pgn_files/: .Adams.pgn.swp
front_end/: chess_gui.js  chess_page.html  deneme.html  new.html  script.js  styless.css  styless.css.map  styless.scss
src/: Move.cpp  Move.hpp  UCI.cpp  UCI.hpp  bitoperations.hpp  board.cpp  constants.hpp  evaluation.cpp  evaluation.hpp  gameState.cpp  gameState.hpp  loader.cpp  loader.hpp  main.cpp  move.cpp  move.hpp  moveGeneration.cpp  moveGeneration.hpp  moveList.cpp  moveList.hpp  moveToStr.cpp  moveToStr.hpp  moveValidator.cpp  move_generation.cpp  move_generation.hpp  movelist.cpp  movelist.hpp  position.cpp  position.hpp  search.cpp  search.hpp  tables.cpp  tables.hpp  tt.cpp  tt.hpp  utilities.cpp  utilities.hpp  zobrist.cpp  zobrist.hpp
tests/: gameLoopTest.cpp  perftStandalone.cpp  perftTest.cpp  perftTest.hpp  unitTests.cpp
tests/garbage/: mask_generation.cpp
trash/: algebraic_notation.py  piece_types.py  pieces.py
utilities/: BoardMaskGenerator.py  BoardUtilities.py  Constants.py  PieceIdentifier.py
